deploy/overlays/cluster-01-central/opensearch-cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-dashboards
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: opensearch-dashboards.k8s-cluster-01.miribit.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-cluster-dashboards
                port:
                  number: 5601
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-api
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/backend-protocol-insecure: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: opensearch.k8s-cluster-01.miribit.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-cluster
                port:
                  number: 9200
